# WardSOAR

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
config/: cdn_allowlist.yaml  known_bad_actors.yaml  known_false_positives.yaml  known_false_positives_user.yaml  network_baseline.yaml  suspect_asns.yaml  whitelist.yaml
config/prompts/: analyzer_system.txt
config/yara_rules/: 00_eicar.yar
docs/: ARCHITECTURE.md  COVERAGE.md  MONOREPO.md  RELEASES.md  architecture_v0.5_historical.md  bootstrap-netgate.md  overnight-report-2026-04-19.md
installer/: config_template.yaml  env_template.txt  license.rtf  ward.spec  ward.wxs  ward_setup.iss
scripts/: build.ps1  grant_log_access.bat  grant_log_access.ps1  install-sysmon.ps1  parse_check.ps1  parse_check2.ps1  simulate_threats.py  sync_eve.ps1  test_fmt.ps1
src/: __init__.py  alert_enrichment.py  alert_queue.py  alerts_stats.py  analyzer.py  api_keys_registry.py  asn_enricher.py  baseline.py  bootstrap_checklist.py  cdn_allowlist.py  change_manager.py  collector.py  config.py  decision_cache.py  deduplicator.py  filter.py  forensic_report.py  forensics.py  healthcheck.py  history_rotator.py  ip_enrichment.py  known_bad_actors.py  logger.py  main.py  manual_reviews.py  metrics.py  models.py  netgate_apply.py  netgate_audit.py  netgate_custom_rules.py  netgate_reset.py  netgate_tamper.py  notifier.py  pfsense_alias_migrate.py  pfsense_aliastable.py  pfsense_ssh.py  pfsense_suricata_tune.py  prescorer.py  prescorer_feedback.py  process_risk.py  (+19 more)
src/forensic/: __init__.py  acquisition.py  attack_mapper.py  deep_orchestrator.py  encryption.py  export.py  ioc_extractor.py  manifest.py  memory.py  orchestrator.py  report_pdf.py  storage.py  timeline.py
src/intel/: __init__.py  abuseipdb.py  alienvault_otx.py  base.py  blocklist_de.py  censys_client.py  feodo_tracker.py  firehol.py  greynoise.py  honeypot.py  http_client_base.py  ipinfo_pro.py  manager.py  securitytrails.py  shodan_client.py  spamhaus_drop.py  threatfox.py  urlhaus.py  virustotal_client.py  xforce.py
src/local_av/: __init__.py  defender.py  orchestrator.py  yara_scanner.py
src/ui/: __init__.py  app.py  engine_bridge.py  setup_wizard.py
src/ui/views/: __init__.py  about_dialog.py  activity_view.py  alert_detail.py  alerts.py  config_view.py  dashboard.py  keys_view.py  netgate.py  replay_view.py
tests/: test_alert_enrichment.py  test_alert_queue.py  test_alerts_stats.py  test_analyzer.py  test_api_keys_registry.py  test_asn_enricher.py  test_baseline.py  test_bootstrap_checklist.py  test_cdn_allowlist.py  test_change_manager.py  test_collector.py  test_config.py  test_decision_cache.py  test_deduplicator.py  test_defender.py  test_filter.py  test_forensic.py  test_forensic_deep.py  test_forensic_report.py  test_forensics.py  test_hard_protect.py  test_healthcheck.py  test_history_rotator.py  test_intel_feeds.py  test_intel_http_clients.py  test_intel_phase2c.py  test_intel_phase2d.py  test_ip_enrichment.py  test_known_bad_actors.py  test_local_av_orchestrator.py  test_logger.py  test_main.py  test_manual_reviews.py  test_metrics.py  test_models.py  test_netgate_apply.py  test_netgate_audit.py  test_netgate_custom_rules.py  test_netgate_reset.py  test_netgate_tamper.py  (+26 more)
tests/integration/: test_scenarios.py
