[project]
name = "wardsoar"
dynamic = ["version"]
description = "Autonomous threat detection and response system"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Loic Ader", email = "contact@loicata.com" },
]
dependencies = [
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "vt-py>=0.18.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "wmi>=1.5.1",
    "pywin32>=306",
    "PySide6>=6.7.0",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
]

[project.gui-scripts]
wardsoar = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "qfluentwidgets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncssh.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yara"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32crypt"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "win32event",
    "win32api",
    "win32gui",
    "win32con",
    "winerror",
    "pywintypes",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
