[project]
name = "wardsoar"
dynamic = ["version"]
description = "Autonomous threat detection and response system"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Loic Ader", email = "contact@loicata.com" },
]
dependencies = [
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "vt-py>=0.18.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "wmi>=1.5.1",
    "pywin32>=306",
    "PySide6>=6.7.0",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
]

[project.gui-scripts]
wardsoar = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
# Teach mypy about the monorepo packages so ``wardsoar.core.*``
# imports resolve the same way they do at runtime (after the
# editable install). Each package's src/ becomes a search root.
mypy_path = [
    "packages/wardsoar-core/src",
    "packages/wardsoar-pc/src",
    "packages/wardsoar-virus-sniff/src",
]
# PEP 420 namespace packages (``wardsoar`` has no __init__.py) need
# explicit_package_bases to coexist with multiple src trees.
explicit_package_bases = true
namespace_packages = true
# Skip runtime directories that may land inside packages/ before the
# get_data_dir() fix takes effect (sealed by icacls → unreadable by
# mypy's filesystem scan). These dirs are gitignored but remain on
# disk and would crash ``mypy --strict`` with WinError 5.
exclude = [
    "evidence/",
    "data/",
    "intel_feeds/",
    "logs/",
    "reports/",
    "snapshots/",
    "netgate_backups/",
    "tmp/",
]

[[tool.mypy.overrides]]
module = "qfluentwidgets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncssh.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yara"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32crypt"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "win32event",
    "win32api",
    "win32gui",
    "win32con",
    "winerror",
    "pywintypes",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


# ---------------------------------------------------------------------------
# uv workspace — monorepo layout (Option 2, decided 2026-04-24)
# ---------------------------------------------------------------------------
# The legacy ``src/`` layout coexists with the new ``packages/`` layout
# during the migration. Each package under ``packages/`` is a standalone
# Python distribution with its own pyproject.toml, dependencies, and
# release cycle. See docs/ARCHITECTURE.md §3 for the rationale.
[tool.uv.workspace]
members = ["packages/*"]
