[project]
name = "wardsoar"
dynamic = ["version"]
description = "Autonomous threat detection and response system"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Loic Ader", email = "contact@loicata.com" },
]
dependencies = [
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "vt-py>=0.18.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "wmi>=1.5.1",
    "pywin32>=306",
    "PySide6>=6.7.0",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
]

[project.gui-scripts]
wardsoar = "wardsoar.pc.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
# Version flows from the PC package (which ships the user-facing MSI).
# Core and pc move together for releases today; a split can happen
# later without breaking the top-level ``wardsoar`` meta-distribution.
version = { attr = "wardsoar.pc.__version__" }

[tool.setuptools.packages.find]
where = ["packages/wardsoar-pc/src", "packages/wardsoar-core/src"]
include = ["wardsoar*"]
namespaces = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default ruff rules (E + F) plus flake8-tidy-imports banned-api so
# we can enforce the UI layering decision: PySide6 / qfluentwidgets
# may only be imported inside packages/wardsoar-pc/.../ui/.
# See test_architecture.py and docs/ARCHITECTURE.md ("UI layering").
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"PySide6".msg = "PySide6 imports allowed only under wardsoar.pc.ui (see docs/ARCHITECTURE.md UI layering)."
"PyQt5".msg = "Use PySide6 instead, restricted to wardsoar.pc.ui."
"PyQt6".msg = "Use PySide6 instead, restricted to wardsoar.pc.ui."
"qfluentwidgets".msg = "qfluentwidgets imports allowed only under wardsoar.pc.ui."
"shiboken6".msg = "shiboken6 imports allowed only under wardsoar.pc.ui."

[tool.ruff.lint.per-file-ignores]
# The ui subtree is the one place Qt is allowed in production code.
"packages/wardsoar-pc/src/wardsoar/pc/ui/**/*.py" = ["TID251"]
# wardsoar-pc tests may construct widgets and dialogs to validate
# them (test_ui.py, test_manual_review_dialog.py, etc.). The
# wardsoar-core test scope stays Qt-free — that is enforced both
# by this rule (no exception for core tests) and by
# test_architecture.py.
"packages/wardsoar-pc/tests/**/*.py" = ["TID251"]

[tool.mypy]
strict = true
# Teach mypy about the monorepo packages so ``wardsoar.core.*``
# imports resolve the same way they do at runtime (after the
# editable install). Each package's src/ becomes a search root.
mypy_path = [
    "packages/wardsoar-core/src",
    "packages/wardsoar-pc/src",
    "packages/wardsoar-virus-sniff/src",
]
# PEP 420 namespace packages (``wardsoar`` has no __init__.py) need
# explicit_package_bases to coexist with multiple src trees.
explicit_package_bases = true
namespace_packages = true
# Skip runtime directories that may land inside packages/ before the
# get_data_dir() fix takes effect (sealed by icacls → unreadable by
# mypy's filesystem scan). These dirs are gitignored but remain on
# disk and would crash ``mypy --strict`` with WinError 5.
exclude = [
    "evidence/",
    "data/",
    "intel_feeds/",
    "logs/",
    "reports/",
    "snapshots/",
    "netgate_backups/",
    "tmp/",
]

[[tool.mypy.overrides]]
module = "qfluentwidgets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncssh.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yara"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32crypt"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "win32event",
    "win32api",
    "win32gui",
    "win32con",
    "winerror",
    "pywintypes",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


# ---------------------------------------------------------------------------
# uv workspace — monorepo layout (Option 2, decided 2026-04-24)
# ---------------------------------------------------------------------------
# The legacy ``src/`` layout coexists with the new ``packages/`` layout
# during the migration. Each package under ``packages/`` is a standalone
# Python distribution with its own pyproject.toml, dependencies, and
# release cycle. See docs/ARCHITECTURE.md §3 for the rationale.
[tool.uv.workspace]
members = ["packages/*"]
